--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -1,18 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
-    <div style="margin-top: 50px;">
-    <div class="jumbotron" style="background-color:transparent !important; color:#fff">
-    <div class="panel-body">
-    <h1><strong>Make sales great again. 🗽</strong></h1>
-    <p>Automate lead qualification and let your salesforce focus on the highest value opportunities.<br>Want to know more? Sign up today for a free trial</p>
-    <hr>
-    <p style="text-align: right"><a class="btn btn-success btn-lg" href="#" role="button">Sign up</a>  or  <a class="btn btn-default btn-lg" href="/login" role="button">Log in</a></p>
-    
+<div class="container page-form" style="color:#fff">
+    <form id="login-form" action="/auth/register" method="post"> 
+        <div class="form-group">
+            <label for="first_name">Fisrt Name</label>
+            <input type="text" id="first_name" class="form-control" name="first_name">
+        </div>
+        <div class="form-group">
+            <label for="last_name">Last Name</label>
+            <input type="text" id="last_name" class="form-control" name="last_name">
+        </div>
+        <div class="form-group">
+            <label for="company">Company</label>
+            <input type="text" id="company" class="form-control" name="company">
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" id="email" class="form-control" name="email">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" class="form-control" name="password">
+        </div>
+        <div id="login-button">
+        <button type="submit" class="btn btn-success">Log in</button>
+        </div>
+    </form>
 
-
-    </div>
-    </div>
-    </div>
 </div>
 {% endblock %}
