--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,6 +1,7 @@
 @font-face { font-family: Exo; src: url('Exo2-Regular.otf'); } 
 @font-face { font-family: Avenir; src: url('AvenirNextCyr-Regular.otf'); } 
 
+
 #login-form {
     margin-top: 25px;
 }
@@ -10,13 +11,50 @@
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
-body{position:relative;width:100%;min-height:auto;background:url(../img/bg-pattern.png),#2483dc;background:url(../img/bg-pattern.png),-webkit-linear-gradient(to left,#2483dc,#2455dc);background:url(../img/bg-pattern.png),linear-gradient(to left,#2483dc,#2455dc);}
+/* body{position:relative;width:100%;min-height:auto;background:url(../img/bg-pattern.png),#2483dc;background:url(../img/bg-pattern.png),-webkit-linear-gradient(to left,#2483dc,#2455dc);background:url(../img/bg-pattern.png),linear-gradient(to left,#2483dc,#2455dc);}*/
+
+body {
+    background-color: rgb(247,248,250);
+}
+
+
+.white-panel {
+    background-color:white; 
+    border-radius:3px; 
+    /*height:500px;*/
+}
+
+.white-panel-topbar{
+    padding:10px; 
+    background-color:rgb(251,251,253); 
+    border-radius:3px;
+}
+
+.subtitle{
+    color: rgb(171,175,177)
+}
+
+.title{
+    color: rgb(81,90,95)
+}
 
 
 .shadow {
-  -moz-box-shadow:    3px 3px 5px 6px #ccc;
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
-  box-shadow:         3px 3px 5px 6px #ccc;
+  -moz-box-shadow:    0px 0px 8px 0px #ccc;
+  -webkit-box-shadow: 0px 0px 8px 0px #ccc;
+  box-shadow:         0px 0px 8px 0px #ccc;
+}
+
+
+.no-border {
+    border: 0;
+    box-shadow: none; /* You may want to include this as bootstrap applies these styles too */
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 
@@ -25,8 +63,8 @@ div.circle {
   -webkit-border-radius: 10px 10px;
   border-radius: 50px/50px;
   border: solid 1px rgb(184, 187, 188);
-  width: 10px;
-  height: 10px;
+  width: 100px;
+  height: 100px;
 }
 
 
@@ -57,4 +95,65 @@ body {
 }
 #login-button {
     text-align:right;
+}
+
+/* CSS for the toggle switch*/
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: rgb(66, 134, 244);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px rgb(66, 134, 244);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 17px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
