--- a/src/templates/home_new.html
+++ b/src/templates/home_new.html
@@ -109,7 +109,7 @@
             <br>
 
 
-            <div class="shadow white-panel" style="margin-right:40px">
+            <div class="shadow white-panel">
                <div class="row">
                   <div class="col-xs-9">
                      <div style="padding:10px">
