--- a/src/templates/home_new.html
+++ b/src/templates/home_new.html
@@ -113,7 +113,7 @@
                <div class="row">
                   <div class="col-xs-9">
                      <div style="padding:10px">
-                        <p style="color:grey">RE: Our initial conversation<br><span class="label label-success" >Reply</span></p>
+                        <p style="color:grey">RE: Our initial conversation<br><span class="label label-success" style="background-color:rgb(66, 134, 244)">Reply</span></p>
                      </div>
                   </div>
                   <div class="col-xs-3"  style="padding:10px">
