--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -136,11 +136,16 @@ body {
 }
 
 input:checked + .slider {
-  background-color: rgb(255, 145, 94);
+  background-color: rgb(66, 134, 244);
+}
+
+
+#ex1Slider .slider-selection {
+	background: #BABABA;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px rgb(255, 145, 94);
+  box-shadow: 0 0 1px rgb(66, 134, 244);
 }
 
 input:checked + .slider:before {
