--- a/src/templates/home_new.html
+++ b/src/templates/home_new.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<!-- background-color:rgb(255, 145, 94) -->
-<nav class="navbar-default navbar-fixed-top shadow" style="background-color:rgb(255, 145, 94)">
+<!-- background-color:rgb(37, 67, 150) -->
+<nav class="navbar-default navbar-fixed-top shadow colorshade" >
    <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -41,7 +41,7 @@
                      <div class="col-xs-6">
                         <p class="subtitle">5 total</p>
                      </div>
-                     <div class="col-xs-6" style="text-align:right; color:rgb(255, 145, 94)">
+                     <div class="col-xs-6" style="text-align:right; color:rgb(37, 67, 150)">
 
                         <div data-toggle="modal" data-target="#exampleModal" data-whatever="blabla"><p>Add <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></p></div>
 
@@ -54,8 +54,8 @@
                <div class="container-fluid">
                   <br>
                   <div class="list-group">
-                     <a href="#" class="list-group-item"><strong>Sean Lewin </strong><br><span  class="subtitle">The awesome co.</span><span class="badge" style="background-color:rgb(255, 145, 94)"></span></a>
-                     <a href="#" class="list-group-item"><strong>Elon Musk </strong><br><span  class="subtitle">CEO at Tesla</span><span class="badge" style="background-color:white; color:rgb(255, 145, 94)"></span></a>
+                     <a href="#" class="list-group-item"><strong>Sean Lewin </strong><br><span  class="subtitle">The awesome co.</span><span class="badge" style="background-color:rgb(37, 67, 150)"></span></a>
+                     <a href="#" class="list-group-item"><strong>Elon Musk </strong><br><span  class="subtitle">CEO at Tesla</span><span class="badge" style="background-color:white; color:rgb(37, 67, 150)"></span></a>
                      <a href="#" class="list-group-item"><strong>Jeff Bezos </strong><br><span  class="subtitle">CEO at Amazon</span></a>
                      <a href="#" class="list-group-item"><strong>Mark Benioff </strong><br><span  class="subtitle">CEO at Salesforce</span></a>
                   </div>
@@ -70,7 +70,7 @@
                      <div class="col-xs-9" style="height:0px">
                         <p  class="title"><strong>Message history</strong></p>
                      </div>
-                     <div class="col-xs-3" style="height:0px; text-align:right; color:rgb(66, 134, 244)">
+                     <div class="col-xs-3" style="height:0px; text-align:right; color:rgb(37, 67, 150)">
                         <p><strong>Autopilot</strong></p>
                      </div>
                   </div>
@@ -78,7 +78,7 @@
                      <div class="col-xs-9">
                         <p class="subtitle">3 touches, last message 4 days ago</p>
                      </div>
-                     <div class="col-xs-3" style="text-align:right; color:rgb(255, 145, 94)">
+                     <div class="col-xs-3" style="text-align:right; color:rgb(37, 67, 150)">
                         <label class="switch">
                            <input type="checkbox" checked> 
                            <div class="slider round"></div>
@@ -106,7 +106,7 @@
                   <p>Hi Aryeh,<br>Hope this email finds you well<br>Just want to follow up on the email below - are you still interested in knowing more about our offering?<br>In case let me know and we'll schedule a quick call<br>Best, <br>Federico</p>
                </div>
                <div style="text-align:right; padding:10px">
-                  <button type="submit" class="btn btn-primary" style="background-color:rgb(66, 134, 244); border:rgb(66, 134, 244)">Send</button>
+                  <button type="submit" class="btn btn-primary" style="background-color:rgb(37, 67, 150); border:rgb(37, 67, 150)">Send</button>
                </div>
             </div>
             <br>
@@ -116,7 +116,7 @@
                <div class="row">
                   <div class="col-xs-9">
                      <div style="padding:10px">
-                        <p style="color:grey">RE: Our initial conversation<br><span class="label" style="background-color:rgb(255, 145, 94)">Reply</span></p>
+                        <p style="color:grey">RE: Our initial conversation<br><span class="label" style="background-color:rgb(37, 67, 150)">Reply</span></p>
                      </div>
                   </div>
                   <div class="col-xs-3"  style="padding:10px">
@@ -133,7 +133,7 @@
                <div class="row">
                   <div class="col-xs-9">
                      <div style="padding:10px">
-                        <p style="color:grey">RE: Our initial conversation<br><span class="label" style="background-color:rgb(255, 145, 94)">Follow up</span></p>
+                        <p style="color:grey">RE: Our initial conversation<br><span class="label" style="background-color:rgb(37, 67, 150)">Follow up</span></p>
                      </div>
                   </div>
                   <div class="col-xs-3"  style="padding:10px">
@@ -153,7 +153,7 @@
                <div class="row">
                   <div class="col-xs-9">
                      <div style="padding:10px">
-                        <p style="color:grey">RE: Our initial conversation<br><span class="label" style="background-color:rgb(255, 145, 94)">Initial message</span></p>
+                        <p style="color:grey">RE: Our initial conversation<br><span class="label" style="background-color:rgb(37, 67, 150)">Initial message</span></p>
                      </div>
                   </div>
                   <div class="col-xs-3"  style="padding:10px">
