--- a/src/templates/home_new.html
+++ b/src/templates/home_new.html
@@ -6,16 +6,22 @@
    <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+         <button type="button" class="navbar-toggle collapsed" style="border:white" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
          <span class="sr-only">Toggle navigation</span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
+         <span class="icon-bar" style="background-color:white"></span>
+         <span class="icon-bar" style="background-color:white"></span>
+         <span class="icon-bar" style="background-color:white"></span>
          </button>
          <a class="navbar-brand" style="color:white"><strong>Vocado</strong></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+         <ul class="nav navbar-nav navbar-left">
+            <li><a href="#" style="color:white">REACH</a></li>
+            <li style="background-color:rgb(255, 94, 94)"><a href="#" style="color:white">ENGAGE</a></li>
+            <li><a href="#" style="color:white">MEASURE</a></li>
+         </ul>
+
          <ul class="nav navbar-nav navbar-right">
             <li><a href="#" style="color:white"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile</a></li>
             <li><a href="#" style="color:white"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Setting</a></li>
@@ -23,9 +29,19 @@
       </div>
       <!-- /.navbar-collapse -->
    </div>
+
    <!-- /.container-fluid -->
 </nav>
-<div  style=" margin-right:20px; margin-left:20px; margin-top:50px">
+
+
+
+
+
+<div  style=" margin-right:20px; margin-left:20px; margin-top:60px">
+
+<ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="#">Working leads</a></li>
+</ul>
    <div class="container-fluid" style="height:20px"> </div>
    <div class="container-fluid">
       <!-- Main frame containing the 3 main white panels-->
